regularization done- regular tables created- editing confusion table code 2017 to adapt both regular and raw

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/confusion_style_tables/00_Eastern_WA/Acreages_ConfusionStyle_raw.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/confusion_style_tables/00_Eastern_WA/Acreages_ConfusionStyle_raw.ipynb
@@ -52,10 +52,10 @@
    "outputs": [],
    "source": [
     "sys.path.append('/Users/hn/Documents/00_GitHub/Ag/remote_sensing/python/')\n",
-    "import remote_sensing_core as rc\n",
+    "sys.path.append('/home/hnoorazar/remote_sensing_codes/')\n",
     "\n",
-    "# sys.path.append('/home/hnoorazar/remote_sensing_codes/')\n",
-    "# import remote_sensing_core as rcp"
+    "import remote_sensing_core as rc\n",
+    "import remote_sensing_core as rcp"
    ]
   },
   {
@@ -93,7 +93,8 @@
    "source": [
     "# We may need to write a for-loop if we want more than one county.\n",
     "given_county = \"Grant\"\n",
-    "indeks = \"EVI\""
+    "indeks = \"EVI\"\n",
+    "raw_or_regular = \"regular\""
    ]
   },
   {
@@ -121,7 +122,7 @@
    "source": [
     "peak_tables_dir = \"/Users/hn/Documents/01_research_data/\" + \\\n",
     "                  \"remote_sensing/01_NDVI_TS/00_Eastern_WA_withYear/tables/\" + \\\n",
-    "                   given_county + \"_\" + str(SF_year) + \"/savitzky_\" + indeks + \"/\"\n",
+    "                   given_county + \"_\" + str(SF_year) + \"_\" + raw_or_regular + \"/savitzky_\" + indeks + \"/\"\n",
     "\n",
     "####\n",
     "####  parameters\n",
