--- a/remote_sensing/python/Local_Jupyter_NoteBooks/confusion_style_tables/00_Eastern_WA/acreages_DoublePeaks_raw.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/confusion_style_tables/00_Eastern_WA/acreages_DoublePeaks_raw.ipynb
@@ -41,7 +41,7 @@
     "sys.path.append('/home/hnoorazar/remote_sensing_codes/')\n",
     "\n",
     "import remote_sensing_core as rc\n",
-    "import remote_sensing_core as rcp\n"
+    "import remote_sensing_core as rcp"
    ]
   },
   {
