--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/Filling_The_Gap_2Ways.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/Filling_The_Gap_2Ways.ipynb
@@ -60,13 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "f_name = \"a_regularized_TS.csv\"\n",
-    "a_regularized_TS = pd.read_csv(data_dir + f_name, low_memory=False)\n",
-    "a_regularized_TS.sort_values(by=['image_year', 'doy'], inplace=True)"
+    "a_regularized_TS = pd.read_csv(data_dir + f_name, low_memory=False)"
    ]
   },
   {
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a_regularized_TS.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A = rc.fill_theGap_linearLine(a_regularized_TS, indeks, SF_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +220,7 @@
        "1  3308.620365  T13R24E4        2016     2017  284 -2.000000  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,155 +230,108 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 104,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.4175614 , -2.        ,  0.74173785,  0.72328165,  0.24971688,\n",
-       "       -2.        ,  0.45789181, -2.        ,  0.37367702, -2.        ,\n",
-       "       -2.        , -2.        , -2.        , -2.        ,  0.24103474,\n",
-       "        0.22458873, -2.        , -2.        ,  0.24738865,  0.41210467,\n",
-       "        0.49268638,  0.58170796,  0.54144885,  0.62809484,  0.75182253,\n",
-       "        0.72722519,  0.8272405 ,  0.88276165,  0.86827636,  0.73957461,\n",
-       "        0.66953682,  0.72046171,  0.63967863,  0.64954225,  0.69626907,\n",
-       "        0.72598694,  0.72678947, -2.        ,  0.73320505,  0.7036713 ,\n",
-       "        0.70267974,  0.48580156,  0.54348966, -2.        ,  0.4343211 ,\n",
-       "        0.36825969, -2.        ,  0.32663178,  0.21325563,  0.30671939,\n",
-       "       -2.        ,  0.30430575,  0.3123942 ,  0.26554537])"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "x_axis = rc.extract_XValues_of_RegularizedTS_3Yrs(regularized_TS = a_regularized_TS, \\\n",
-    "                                                  SF_yr = SF_year)\n",
-    "TS_array = a_regularized_TS[indeks].copy().values\n",
-    "TS_array"
+    "# Create Aeolus like space and test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(54,)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TS_array[0] = -2\n",
-    "TS_array[51] = -2\n",
-    "TS_array[52] = -2\n",
-    "TS_array[53] = -2\n",
-    "TS_array.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1  5  7  9 10 11 12 13 16 17 37 43 46 50]\n",
-      "[ 0  2  3  4  6  8 14 15 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33\n",
-      " 34 35 36 38 39 40 41 42 44 45 47 48 49 51 52 53]\n"
-     ]
-    }
-   ],
-   "source": [
-    "missing_indicies = np.where(TS_array == -2)[0]\n",
-    "Notmissing_indicies = np.where(TS_array != -2)[0]\n",
-    "print(missing_indicies)\n",
-    "print(Notmissing_indicies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "missing_indicies = np.where(TS_array == -2)[0]\n",
-    "Notmissing_indicies = np.where(TS_array != -2)[0]\n",
+    "a_regularized_TS_1 = a_regularized_TS.copy()\n",
+    "a_regularized_TS_2 = a_regularized_TS.copy()\n",
+    "a_regularized_TS_3 = a_regularized_TS.copy()\n",
+    "a_regularized_TS_4 = a_regularized_TS.copy()\n",
     "\n",
-    "#\n",
-    "#    Check if the first or last k values are missing\n",
-    "#    if so, replace them with proper number and shorten the task\n",
-    "#\n",
-    "left_pointer = Notmissing_indicies[0]\n",
-    "right_pointer = Notmissing_indicies[-1]\n",
-    "\n",
-    "if left_pointer > 0:\n",
-    "    TS_array[:left_pointer] = TS_array[left_pointer]\n",
-    "\n",
-    "if right_pointer < (len(TS_array) - 1):\n",
-    "    TS_array[right_pointer:] = TS_array[right_pointer]\n",
-    "#    \n",
-    "# update indexes.\n",
-    "#\n",
-    "missing_indicies = np.where(TS_array == -2)[0]\n",
-    "Notmissing_indicies = np.where(TS_array != -2)[0]\n",
-    "\n",
-    "# left_pointer = Notmissing_indicies[0]\n",
-    "stop = right_pointer\n",
-    "right_pointer = left_pointer + 1\n"
+    "a_regularized_TS_1[\"ID\"] = \"1\"\n",
+    "a_regularized_TS_2[\"ID\"] = \"2\"\n",
+    "a_regularized_TS_3[\"ID\"] = \"3\"\n",
+    "a_regularized_TS_4[\"ID\"] = \"4\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "missing_indicies = np.where(TS_array == -2)[0]\n",
-    "\n",
-    "while len(missing_indicies) > 0:\n",
-    "    left_pointer = missing_indicies[0] - 1\n",
-    "    left_value = TS_array[left_pointer]\n",
-    "    \n",
-    "    right_pointer = missing_indicies[0]\n",
-    "    \n",
-    "    while TS_array[right_pointer] == -2:\n",
-    "        right_pointer += 1\n",
-    "    \n",
-    "    right_value = TS_array[right_pointer]\n",
-    "    \n",
-    "    if (right_pointer - left_pointer) == 2:\n",
-    "        # if there is a single gap, then we have just average of the\n",
-    "        # values\n",
-    "        # Avoid extra computation!\n",
-    "        #\n",
-    "        TS_array[left_pointer + 1] = 0.5 * (TS_array[left_pointer] + TS_array[right_pointer])\n",
-    "    else:\n",
-    "        # form y= ax + b\n",
-    "        slope = (right_value - left_value) / (x_axis[right_pointer] - x_axis[left_pointer]) # a\n",
-    "        b = right_value - (slope * x_axis[right_pointer])\n",
-    "        TS_array[left_pointer+1 : right_pointer] = slope * x_axis[left_pointer+1 : right_pointer] + b\n",
-    "        missing_indicies = np.where(TS_array == -2)[0]\n",
-    "        \n",
-    "    \n",
-    "a_regularized_TS[indeks] = TS_array"
+    "an_EE_TS = pd.concat([a_regularized_TS_1, a_regularized_TS_2, a_regularized_TS_3, a_regularized_TS_4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polygon_list = an_EE_TS['ID'].unique()\n",
+    "print(len(polygon_list))\n",
+    "\n",
+    "########################################################################################\n",
+    "###\n",
+    "###  initialize output data. all polygons in this case\n",
+    "###  will have the same length. \n",
+    "###  9 steps in the first three months, followed by 36 points in the full year,\n",
+    "###  9 months in the last year\n",
+    "###\n",
+    "reg_cols = an_EE_TS.columns\n",
+    "nrows = 54 * len(polygon_list)\n",
+    "output_df = pd.DataFrame(data = None,\n",
+    "                         index = np.arange(nrows), \n",
+    "                         columns = reg_cols)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter = 0\n",
+    "\n",
+    "for a_poly in polygon_list:\n",
+    "    if (counter % 300 == 0):\n",
+    "        print (counter)\n",
+    "    curr_field = an_EE_TS[an_EE_TS['ID']==a_poly].copy()\n",
+    "    ################################################################\n",
+    "    # Sort by DoY (sanitary check)\n",
+    "    curr_field.sort_values(by=['image_year', 'doy'], inplace=True)\n",
+    "    \n",
+    "    curr_field.reset_index(drop=True, inplace=True)\n",
+    "    \n",
+    "    print (\"print(curr_field.shape)\")\n",
+    "    print(curr_field.shape)\n",
+    "    print (\"__________________________________________\")\n",
+    "    ################################################################\n",
+    "    curr_field = rc.fill_theGap_linearLine(curr_field, indeks=\"EVI\", SF_year = 2017)\n",
+    "\n",
+    "    ################################################################\n",
+    "    row_pointer = 54 * counter\n",
+    "    output_df[row_pointer: row_pointer+54] = curr_field.values\n",
+    "    counter += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
