--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/moving_10_day_window.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/moving_10_day_window.ipynb
@@ -1,10 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# This is scratch to do maximum in 10-days intervals. "
    ]
@@ -1091,9 +1089,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# datetime.datetime(2016, 1, 1) + datetime.timedelta(275 - 1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1108,6 +1104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# datetime.datetime(2016, 1, 1) + datetime.timedelta(275 - 1)\n",
     "# im_yr_sotred = a_df_1.copy()\n",
     "# epoch_sorted = a_df_1.copy()\n",
     "# im_yr_sotred.sort_values(by=['image_year', 'doy'], inplace=True)\n",
