making output directories consistent

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/Filling_The_Gap_2Ways.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/Filling_The_Gap_2Ways.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir =  \"/Users/hn/Documents/01_research_data/remote_sensing/test_data/\""
+    "data_dir =  \"/Users/hn/Documents/01_research_data/remote_sensing/regularized/\""
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_name = \"a_regularized_TS.csv\"\n",
+    "f_name = \"Regularized_Grant_SF_2017_NDVI.csv\"\n",
     "a_regularized_TS = pd.read_csv(data_dir + f_name, low_memory=False)"
    ]
   },
@@ -77,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "indeks = \"EVI\"\n",
+    "indeks = \"NDVI\"\n",
     "SF_year = 2017"
    ]
   },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,119 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Acres</th>\n",
-       "      <th>county</th>\n",
-       "      <th>CropGrp</th>\n",
-       "      <th>CropTyp</th>\n",
-       "      <th>DataSrc</th>\n",
-       "      <th>ExctAcr</th>\n",
-       "      <th>IntlSrD</th>\n",
-       "      <th>Irrigtn</th>\n",
-       "      <th>LstSrvD</th>\n",
-       "      <th>Notes</th>\n",
-       "      <th>RtCrpTy</th>\n",
-       "      <th>Shap_Ar</th>\n",
-       "      <th>Shp_Lng</th>\n",
-       "      <th>TRS</th>\n",
-       "      <th>image_year</th>\n",
-       "      <th>SF_year</th>\n",
-       "      <th>doy</th>\n",
-       "      <th>EVI</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>115184_WSDA_SF_2017</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>Grant</td>\n",
-       "      <td>Orchard</td>\n",
-       "      <td>apple</td>\n",
-       "      <td>wsda</td>\n",
-       "      <td>72.371199</td>\n",
-       "      <td>2006/08/31</td>\n",
-       "      <td>micro-sprinkler</td>\n",
-       "      <td>2017/04/24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>292875.850894</td>\n",
-       "      <td>3308.620365</td>\n",
-       "      <td>T13R24E4</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>274</td>\n",
-       "      <td>0.417561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>115184_WSDA_SF_2017</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>Grant</td>\n",
-       "      <td>Orchard</td>\n",
-       "      <td>apple</td>\n",
-       "      <td>wsda</td>\n",
-       "      <td>72.371199</td>\n",
-       "      <td>2006/08/31</td>\n",
-       "      <td>micro-sprinkler</td>\n",
-       "      <td>2017/04/24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>292875.850894</td>\n",
-       "      <td>3308.620365</td>\n",
-       "      <td>T13R24E4</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>284</td>\n",
-       "      <td>-2.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    ID  Acres county  CropGrp CropTyp DataSrc    ExctAcr  \\\n",
-       "0  115184_WSDA_SF_2017   72.0  Grant  Orchard   apple    wsda  72.371199   \n",
-       "1  115184_WSDA_SF_2017   72.0  Grant  Orchard   apple    wsda  72.371199   \n",
-       "\n",
-       "      IntlSrD          Irrigtn     LstSrvD  Notes  RtCrpTy        Shap_Ar  \\\n",
-       "0  2006/08/31  micro-sprinkler  2017/04/24    NaN      NaN  292875.850894   \n",
-       "1  2006/08/31  micro-sprinkler  2017/04/24    NaN      NaN  292875.850894   \n",
-       "\n",
-       "       Shp_Lng       TRS  image_year  SF_year  doy       EVI  \n",
-       "0  3308.620365  T13R24E4        2016     2017  274  0.417561  \n",
-       "1  3308.620365  T13R24E4        2016     2017  284 -2.000000  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a_regularized_TS.head(2)"
    ]
@@ -238,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
