GEE codes... EE +ctrl Z = disater

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/bare_soil_indices_plots.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/bare_soil_indices_plots.ipynb
@@ -222,9 +222,7 @@
     "an_EE_TS_BSI = rc.initial_clean(df = an_EE_TS, column_to_be_cleaned='BSI')\n",
     "an_EE_TS_NDWI = rc.initial_clean(df = an_EE_TS, column_to_be_cleaned='NDWI')\n",
     "an_EE_TS_PSRI = rc.initial_clean(df = an_EE_TS, column_to_be_cleaned='PSRI')\n",
-    "an_EE_TS_LSWI = rc.initial_clean(df = an_EE_TS, column_to_be_cleaned='LSWI')\n",
-    "\n",
-    "an_EE_TS_NDVI.head(2)"
+    "an_EE_TS_LSWI = rc.initial_clean(df = an_EE_TS, column_to_be_cleaned='LSWI')"
    ]
   },
   {
