--- a/remote_sensing/python/Local_Jupyter_NoteBooks/confusion_style_tables/00_Eastern_WA/Acreages_ConfusionStyle_raw_n_regular.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/confusion_style_tables/00_Eastern_WA/Acreages_ConfusionStyle_raw_n_regular.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +86,12 @@
     "SF_year = 2017\n",
     "given_county = \"Grant\"\n",
     "indeks = \"NDVI\"\n",
-    "raw_or_regular = \"regular\""
+    "raw_or_regular = \"raw\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,20 +105,6 @@
     "WSDA_DataTable[\"DataSrc\"] = WSDA_DataTable[\"DataSrc\"].str.lower()\n",
     "WSDA_DataTable[\"CropTyp\"] = WSDA_DataTable[\"CropTyp\"].str.lower()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -139,14 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,9 +141,10 @@
    ],
    "source": [
     "for indeks in [\"EVI\", \"NDVI\"]:\n",
-    "    peak_tables_dir = \"/Users/hn/Documents/01_research_data/\" + \\\n",
-    "                       \"remote_sensing/01_NDVI_TS/00_Eastern_WA_withYear/tables/\" + \\\n",
-    "                       given_county + \"_\" + str(SF_year) + \"_\" + raw_or_regular + \"/savitzky_\" + indeks + \"/\"\n",
+    "    peak_tables_dir = \"/Users/hn/Documents/01_research_data/remote_sensing/\" + \\\n",
+    "                      \"01_NDVI_TS/00_Eastern_WA_withYear/2Years/2Yrs_tables_\" + \\\n",
+    "                       raw_or_regular + \"/\" + given_county + \"_\" + str(SF_year) + \\\n",
+    "                       \"_\" + raw_or_regular + \"_savitzky_\" + indeks + \"/\"\n",
     "\n",
     "    ####\n",
     "    ####  parameters\n",
@@ -196,13 +176,15 @@
     "    for exactly_2_peaks in [False, True]:\n",
     "        for double_by_Note in [False]:\n",
     "            for NASS_out in [False]:\n",
-    "                for non_Irr_out in [True]: # we have dropped out non-irrigated fields in the peak_finding step\n",
+    "                # we have dropped out non-irrigated fields in the peak_finding step\n",
+    "                for non_Irr_out in [True]: \n",
     "                    for perennials_out in [True]: # \n",
     "                        #### \n",
     "                        #### build output dataframe\n",
     "                        #### \n",
     "                        output = pd.DataFrame(data=None, \n",
-    "                                              index = np.arange(len(delta_windows_degrees)), # delta_windows_degrees, # \n",
+    "                                              #delta_windows_degrees\n",
+    "                                              index = np.arange(len(delta_windows_degrees)),\n",
     "                                              columns = output_columns)\n",
     "                        output['parameters'] = delta_windows_degrees\n",
     "\n",
@@ -246,7 +228,8 @@
     "                            win_deg = params[1]\n",
     "                            window = win_deg[0]\n",
     "                            degree = win_deg[1]\n",
-    "                            doubl_pk_file = peak_tables_dir + \"delta\" + str(delt) + \"_Sav_win\" + str(window) + \\\n",
+    "                            doubl_pk_file = peak_tables_dir + \"delta\" + str(delt) + \\\n",
+    "                                            \"_Sav_win\" + str(window) + \\\n",
     "                                            \"_Order\" + str(degree) + \"/all_poly_and_maxs_savitzky.csv\"\n",
     "\n",
     "                            doubl_peak_table = pd.read_csv( doubl_pk_file, low_memory=False)\n",
@@ -283,7 +266,7 @@
     "\n",
     "                            if perennials_out == True:\n",
     "                                doubl_peak_table = doubl_peak_table[\\\n",
-    "                                                    doubl_peak_table.CropTyp.isin(double_crop_potens['Crop_Type'])]\n",
+    "                                         doubl_peak_table.CropTyp.isin(double_crop_potens['Crop_Type'])]\n",
     "                             # print(\"perennials_out \" + str(perennials_out))\n",
     "                             # print (doubl_peak_table.CropTyp.unique())\n",
     "\n",
@@ -303,12 +286,20 @@
     "                            actual_Notdouble_cropped = rc.filter_Notdouble_by_Notes(curr_SF)\n",
     "\n",
     "                            if exactly_2_peaks == False:\n",
-    "                                predicted_double_peaks = doubl_peak_table[doubl_peak_table.max_count >= 2].copy()\n",
-    "                                predicted_Notdouble_peaks = doubl_peak_table[doubl_peak_table.max_count < 2].copy()\n",
+    "                                predicted_double_peaks = doubl_peak_table[\\\n",
+    "                                                         doubl_peak_table.max_count >= 2].copy()\n",
+    "                                \n",
+    "                                predicted_Notdouble_peaks = doubl_peak_table[\\\n",
+    "                                                            doubl_peak_table.max_count < 2].copy()\n",
     "                                exactly_2_peaks_name = \"morethan2Peaks\"\n",
     "                            else:\n",
-    "                                predicted_double_peaks = doubl_peak_table[doubl_peak_table.max_count == 2].copy()\n",
-    "                                predicted_Notdouble_peaks = doubl_peak_table[doubl_peak_table.max_count != 2].copy()\n",
+    "                                predicted_double_peaks = doubl_peak_table[\\\n",
+    "                                                                    doubl_peak_table.max_count == 2].copy()\n",
+    "                                \n",
+    "                                \n",
+    "                                predicted_Notdouble_peaks = doubl_peak_table[\\\n",
+    "                                                            doubl_peak_table.max_count != 2].copy()\n",
+    "                                \n",
     "                                exactly_2_peaks_name = \"exactly2Peaks\"\n",
     "\n",
     "                            # print (\"There are [%(nrow)d] IDs in curr_SF.\" % \\\n",
@@ -318,13 +309,13 @@
     "                            #        {\"nrow\":len(curr_SF['ID'].unique())})\n",
     "\n",
     "                            actual_2_pred_2 = actual_double_cropped[\\\n",
-    "                                                    actual_double_cropped['ID'].isin(predicted_double_peaks['ID'])]\n",
+    "                                            actual_double_cropped['ID'].isin(predicted_double_peaks['ID'])]\n",
     "\n",
     "                            actual_2_pred_2 = actual_2_pred_2['ExctAcr'].sum()\n",
     "\n",
     "                            actual_Not2_pred_2 = actual_Notdouble_cropped[\\\n",
-    "                                                           actual_Notdouble_cropped['ID'].isin(\\\n",
-    "                                                                                      predicted_double_peaks['ID'])]\n",
+    "                                                   actual_Notdouble_cropped['ID'].isin(\\\n",
+    "                                                                  predicted_double_peaks['ID'])]\n",
     "                            actual_Not2_pred_2 = actual_Not2_pred_2['ExctAcr'].sum()\n",
     "\n",
     "                            # the follwoing two lines would not work, since we have not \n",
@@ -335,7 +326,9 @@
     "                            #                            predicted_Notdouble_peaks['ID']))\n",
     "\n",
     "                            actual_2_pred_Not2 = actual_double_cropped['ExctAcr'].sum() - actual_2_pred_2\n",
-    "                            actual_Not2_pred_Not2 = actual_Notdouble_cropped['ExctAcr'].sum() - actual_Not2_pred_2\n",
+    "\n",
+    "                            actual_Not2_pred_Not2 = actual_Notdouble_cropped['ExctAcr'].sum() - \\\n",
+    "                                                      actual_Not2_pred_2\n",
     "\n",
     "                            fillin_col = [\"actual_2_pred_2\", \"actual_2_pred_Not2\", \\\n",
     "                                          \"actual_Not2_pred_2\", \"actual_Not2_pred_Not2\"]\n",
@@ -349,13 +342,15 @@
     "                        ###########\n",
     "                        output['parameters'] = output['parameters'].astype(\"str\")\n",
     "                        write_path = \"/Users/hn/Documents/01_research_data/\" + \\\n",
-    "                                     \"remote_sensing/01_NDVI_TS/00_Eastern_WA_withYear/tables/\" + \\\n",
-    "                                      given_county + \"_\" + str(SF_year) + \"_\" + raw_or_regular + \"/\"\n",
+    "                                     \"remote_sensing/01_NDVI_TS/00_Eastern_WA_withYear/2Years/\" + \\\n",
+    "                                     \"2Yrs_tables_\" + raw_or_regular + \"/\"\n",
+    "                                      \n",
     "\n",
     "                        os.makedirs(write_path, exist_ok=True)\n",
-    "                        filename = write_path + \"SG_\" + indeks + \\\n",
+    "                        filename = write_path + given_county + \"_\" + str(SF_year) + \"_\" + indeks + \\\n",
     "                                   Pere_name + NASS_name + non_Irr_name + dbl_name + \\\n",
-    "                                   \"confusion_Acr_\" + exactly_2_peaks_name + \"_\" + raw_or_regular + \".csv\"\n",
+    "                                   \"confusion_Acr_\" + exactly_2_peaks_name + \"_\" + \\\n",
+    "                                    raw_or_regular + \".csv\"\n",
     "\n",
     "\n",
     "                        output['actual_2_pred_2'] = output['actual_2_pred_2'].astype(float)\n",
@@ -372,18 +367,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "raw_or_regular"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_path"
-   ]
+   "source": []
   }
  ],
  "metadata": {
