remove outliers and big jumps

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/moving_10_day_window_2Yrs.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/moving_10_day_window_2Yrs.ipynb
@@ -504,7 +504,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print (time.strftime('%Y-%m-%d', time.localtime(a_df_1.system_start_time.iloc[0])))"
+   ]
   },
   {
    "cell_type": "code",
