outlier removal codes

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/interpolate outliers beyond -1 and 1 - and -  jumps.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/interpolate outliers beyond -1 and 1 - and -  jumps.ipynb
@@ -121,6 +121,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -129,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,9 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4744940, 26)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a_df.shape"
    ]
@@ -154,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +190,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(268, 26)\n",
+      "(57, 26)\n",
+      "\n",
+      "0.815794653490361\n",
+      "0.03896769117695066\n",
+      "1.5\n",
+      "0.04831437323534887\n",
+      "(57, 26)\n"
+     ]
+    }
+   ],
    "source": [
     "a_df_1 = a_df[a_df.ID == clean_df_with_outliers.ID[0]]\n",
     "print (a_df_1.shape)\n",
@@ -187,11 +227,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(57, 26)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a_df_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Acres</th>\n",
+       "      <th>BSI</th>\n",
+       "      <th>county</th>\n",
+       "      <th>CropGrp</th>\n",
+       "      <th>CropTyp</th>\n",
+       "      <th>DataSrc</th>\n",
+       "      <th>doy</th>\n",
+       "      <th>EVI</th>\n",
+       "      <th>ExctAcr</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>PSRI</th>\n",
+       "      <th>RtCrpTy</th>\n",
+       "      <th>Shap_Ar</th>\n",
+       "      <th>Shp_Lng</th>\n",
+       "      <th>system_start_time</th>\n",
+       "      <th>TRS</th>\n",
+       "      <th>image_year</th>\n",
+       "      <th>B8</th>\n",
+       "      <th>SF_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>18400</td>\n",
+       "      <td>107509_WSDA_SF_2017</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>-0.379966</td>\n",
+       "      <td>Grant</td>\n",
+       "      <td>Hay/Silage</td>\n",
+       "      <td>timothy</td>\n",
+       "      <td>wsda</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>120.245957</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.108302</td>\n",
+       "      <td>Alfalfa Hay</td>\n",
+       "      <td>486618.122925</td>\n",
+       "      <td>2554.280525</td>\n",
+       "      <td>1.470250e+12</td>\n",
+       "      <td>T15R23E27</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>0.564784</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>89220</td>\n",
+       "      <td>107509_WSDA_SF_2017</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>-0.471686</td>\n",
+       "      <td>Grant</td>\n",
+       "      <td>Hay/Silage</td>\n",
+       "      <td>timothy</td>\n",
+       "      <td>wsda</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>0.897852</td>\n",
+       "      <td>120.245957</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.080714</td>\n",
+       "      <td>Alfalfa Hay</td>\n",
+       "      <td>486618.122925</td>\n",
+       "      <td>2554.280525</td>\n",
+       "      <td>1.471375e+12</td>\n",
+       "      <td>T15R23E27</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>0.451564</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        ID  Acres       BSI county     CropGrp  CropTyp  \\\n",
+       "18400  107509_WSDA_SF_2017  120.0 -0.379966  Grant  Hay/Silage  timothy   \n",
+       "89220  107509_WSDA_SF_2017  120.0 -0.471686  Grant  Hay/Silage  timothy   \n",
+       "\n",
+       "      DataSrc    doy       EVI     ExctAcr  ... Notes      PSRI      RtCrpTy  \\\n",
+       "18400    wsda  215.0  1.500000  120.245957  ...   NaN -0.108302  Alfalfa Hay   \n",
+       "89220    wsda  228.0  0.897852  120.245957  ...   NaN -0.080714  Alfalfa Hay   \n",
+       "\n",
+       "             Shap_Ar      Shp_Lng  system_start_time        TRS  image_year  \\\n",
+       "18400  486618.122925  2554.280525       1.470250e+12  T15R23E27        2016   \n",
+       "89220  486618.122925  2554.280525       1.471375e+12  T15R23E27        2016   \n",
+       "\n",
+       "             B8  SF_year  \n",
+       "18400  0.564784     2017  \n",
+       "89220  0.451564     2017  \n",
+       "\n",
+       "[2 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_df_1.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-08-03\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (time.strftime('%Y-%m-%d', time.localtime(a_df_1.system_start_time.iloc[0]/1000)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1470182400"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from calendar import timegm\n",
+    "\n",
+    "utc_time = time.strptime(\"2016-08-03\", \"%Y-%m-%d\")\n",
+    "epoch_time = timegm(utc_time)\n",
+    "epoch_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1470250248.048"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_df_1.system_start_time.iloc[0]/1000"
    ]
   },
   {
