SOS and EOS added

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/interpolate outliers beyond [-1] and [1],  and remove  jumps.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/interpolate outliers beyond [-1] and [1],  and remove  jumps.ipynb
@@ -65,10 +65,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Parameters"
    ]
@@ -919,8 +917,8 @@
    "outputs": [],
    "source": [
     "dataTSS = rc.correct_big_jumps_1DaySeries(dataTMS_jumpie = clean_a_df_1, \n",
-    "                                       give_col=\"EVI\", \n",
-    "                                       maxjump_perDay = 0.015)"
+    "                                          give_col = \"EVI\", \n",
+    "                                           maxjump_perDay = 0.015)"
    ]
   },
   {
@@ -1220,6 +1218,46 @@
    ],
    "source": [
     "len(East_2018.ID.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 0 0 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,1,-1,-2,-3,4,5])\n",
+    "asign = np.sign(a)\n",
+    "signchange = ((np.roll(asign, 1) - asign) != 0).astype(int)\n",
+    "print (signchange)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  1, -1, -1, -1,  1,  1])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asign"
    ]
   },
   {
